# gfx-playground

./: CMakeLists.txt
dependencies/: CMakeLists.txt
dependencies/glad-gl4/: CMakeLists.txt
dependencies/glad-gl4/include/glad/: glad_debug.h  glad_release.h
dependencies/glad-gl4/src/: glad_debug_impl.h  glad_release_impl.h
playground/: CMakeLists.txt  main.cpp  shader.vert  util.cpp  util.h
